		interrupt controller.
		Adding a horrible hack to enable the use of a RAM_MIRROR at
		0x40000000 (for SGI O2 emulation).
20181018	Updating the OpenBSD/sgi installation instructions (still
		in unsupported.html though, and still only diskless).
20181019	Fixing some 8242 key encodings (used by the SGI O2 mode).
		Better memory bank stuff for SGI O2 (128 vs 256 MB RAM).
		Taking the FR bit of the MIPS status register into account to
		use 64-bit floating point registers rather than pairs of 32-bit
		registers (need for OpenBSD/sgi to work).
		Moving OpenBSD/sgi from unsupported.html to guestoes.html.
20181022	Fixing broken MACE interrupt mechanism for SGI O2.
20181025	Implementing MTE_MODE_COPY in the SGI O2 memory transfer engine
		to allow NetBSD to scroll up the framebuffer.
		Made the pckbc work with NetBSD/sgimips.
		Only allow SGI O2 MTE memory fills to pages that are in a TLB.
20181026	Some cleanup and refactoring of the O2 rendering engine and 
		other things.
		ARCS environment fixes (better values for diskless booting).
20181030	Updating NetBSD/sgimips guest OS instructions to version 8.0.
		Some progress on the hw accelerated graphics operations used
		by NetBSD/sgimips' Xorg driver.
20181031	Better separation of pckbc scancode translation tables 1, 2,
		and 3, and beginning to play around with PS/2 mouse movement.
20181101	Fixes to the SGI O2 mec ethernet implementation's register
		alignment to correctly support mixed 32/64-bit access.
20181102	Adding some PHY/MII related parts of the O2 mec device (not
		needed by NetBSD/OpenBSD it seems, but by the O2 PROM).
20181106	Splitting SGI O2 rectangle drawing and line drawing into
		separate parts; NetBSD/sgimips' Xorg now looks reasonable.
20181107	Progress on PS/2 mouse emulation; NetBSD accepts it as "pms0
		at macekbc0" in the SGI O2 emulation mode. (No actual host
		mouse input yet though.)
20181108	Implementing host X11 mouse input for the pckbc device.